<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">4 Squares</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenu</string>

    <!-- GAME -->
    <string name="defaultScore">0</string>
    <string name="defaultTimer">30.00</string>
    <string name="gamePrompt">WHAT COLOR IS THIS?</string>
    <string name="gameOver">GAME OVER</string>
    <string name="bestScore">BEST: 0</string>
    <string name="endScore">SCORE: 0</string>
    <string name="retry">RETRY</string>
    <string name="menu">MENU</string>
    <string name="twitter_share">TWEET</string>
    <string name="facebook_share">SHARE</string>
    <string name="defaultPreGameTimer">3</string>
    <string name="leaderboards_message">*Sign into Google Play to submit your scores to the leaderboards!</string>
    <string name="speedUp">SPEED UP!</string>
    <string name="boost">BOOST</string>
    <string name="freeze">FREEZE</string>
    <string name="survivorTitle">SURVIVAL MODE</string>
    <string name="survivorFTUE">Pick the correct colors to keep your health up.
        \n \n There are 3 types of boosts that enables at:
        \n \n \nstreak 10 - gain health
        \n \nstreak 30 - gain health, freeze time
        \n \nstreak 50 - gain health, freeze time, the button
        \n \nGood luck!</string>
    <string name="start">START</string>

    <!-- MENU -->
    <string name="title">4 SQUARES</string>
    <string name="play">SOLO PLAY</string>
    <string name="multiplayerPlay">ONLINE PLAY</string>
    <string name="leaderboards">LEADERBOARDS</string>
    <string name="copyright">© JOSHUA CHING 2014</string>
    <string name="volumeCD">volume</string>
    <string name="back">BACK</string>
    <string name="gameModeTitle">GAME MODES</string>
    <string name="classicMode">NORMAL</string>
    <string name="challengeMode">HARD</string>
    <string name="insaneMode">INSANE</string>
    <string name="survivorMode">SURVIVAL</string>

    <!-- COLOR -->
    <color name="navy">#2c3e50</color>
    <color name="red">#e64c3c</color>
    <color name="red_press">#c0392b</color>
    <color name="yellow">#f1c40f</color>
    <color name="yellow_press">#f39c12</color>
    <color name="green">#2ecc71</color>
    <color name="green_press">#27ae60</color>
    <color name="blue">#3498db</color>
    <color name="blue_press">#2980b9</color>
    <color name="orange">#e67e22</color>
    <color name="orange_press">#d35400</color>
    <color name="turquoise">#1abc9c</color>
    <color name="turquoise_press">#16a085</color>
    <color name="purple">#9b59b6</color>
    <color name="purple_press">#8e44ad</color>
    <color name="gray">#95a5a6</color>
    <color name="gray_press">#7f8c8d</color>
    <color name="brown">#8E6A41</color>
    <color name="brown_press">#825a2c</color>
    <color name="black">#000000</color>
    <color name="pink">#FF7BDE</color>
    <color name="pink_press">#CF64B4</color>
    <color name="red2">#E85E50</color>
    <color name="red3">#EA6E62</color>
    <color name="red4">#EC7C72</color>
    <color name="yellow2">#F2CA27</color>
    <color name="yellow3">#F3CF3D</color>
    <color name="yellow4">#F4D450</color>
    <color name="green2">#43D17F</color>
    <color name="green3">#56D68C</color>
    <color name="green4">#67DA98</color>
    <color name="blue2">#48A2DF</color>
    <color name="blue3">#5AABE2</color>
    <color name="blue4">#6AB3E5</color>
    <color name="cloud">#ffffff</color>
    <color name="cloud_dark">#ecf0f1</color>
    <color name="black_trans50">#80000000</color>
    <color name="transparent">#00000000</color>
    <color name="red_signout">#dd4b39</color>
    <color name="health_bar">#ecf0f1</color>
    <color name="health_bar_back">#303030</color>
    <color name="red_trans60">#80FF0000</color>
    <color name="cyan">#00CCCC</color>

    <!-- ADMOB -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- CHARTBOOST -->
    <string name="chartboost_app_id"></string>
    <string name="chartboost_app_signature"></string>

    <!-- GOOGLE PLAY SERVICES -->
    <string name="app_id">1234567890</string>
    <string name="classic_leaderboard">abcdefg1234567</string>
    <string name="challenge_leaderboard">abcdefg1234567</string>
    <string name="insane_leaderboard">abcdefg1234567</string>
    <string name="survivor_leaderboard">abcdefg1234567</string>

</resources>
