<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context="com.jchingdev.squares.MainMenu">
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/cloud"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_above="@+id/play"
        android:layout_marginBottom="40dp"/>
    
    <Button
        android:id="@+id/play"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:background="@drawable/gray_button"
        android:textColor="@color/cloud"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="15dp"
        android:onClick="playClicked"/> 
        
   		<TextView
        	android:id="@+id/bestScore"
        	android:layout_below="@+id/play"
        	android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
        	android:text="@string/bestScore"
        	android:textColor="@color/cloud"
        	android:textStyle="bold"
        	android:textSize="18sp"
        	android:layout_centerHorizontal="true">
        </TextView>
        	    
    
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright"
        android:textSize="12sp"
        android:layout_marginBottom="20dp">
    </TextView>

</RelativeLayout>
