<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:animateLayoutChanges="true"
    android:id="@+id/main_back"
    tools:context="com.jchingdev.squares.singleplayer.MainActivityNormal" >
     
    <!-- GAMEPLAY -->
    
    <View
        android:id="@+id/vAnchor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true"/>
   
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultTimer"
        android:textColor="@color/cloud"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:visibility="gone"/>
    
    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultScore"
        android:textColor="@color/cloud"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    
    <ProgressBar
    	android:id="@+id/healthBar"
    	android:layout_height="30dp"
    	android:layout_width="fill_parent"
    	android:layout_below="@+id/score"
    	android:indeterminateOnly="false"
    	android:progressDrawable="@drawable/health_bar"
    	android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"/>
    
    <ProgressBar
    	android:id="@+id/freezeBar"
    	android:layout_height="10dp"
    	android:layout_width="fill_parent"
    	android:layout_alignBottom="@+id/healthBar"
    	android:indeterminateOnly="false"
    	android:progressDrawable="@drawable/freeze_bar"
    	android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"/>
    
    <Button
        android:id="@+id/boost"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/m_purple"
        android:text="@string/boost"
        android:textColor="@color/cloud"
        android:textStyle="bold"
        android:onClick="boostClicked"
        android:textSize="18sp"
        android:layout_below="@+id/healthBar"
        android:layout_marginTop="0dp"
        android:visibility="invisible"/>
    
    <RelativeLayout
        android:paddingLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp">
        
        <TextView
        	android:id="@+id/speedUp"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:layout_above="@+id/answer"
        	android:textColor="@color/cyan"
        	android:textSize="40sp"
        	android:textStyle="bold"
        	android:layout_centerHorizontal="true"
        	android:layout_marginBottom="35dp"
        	android:text="@string/speedUp"
        	android:visibility="invisible"/>
        
        <TextView
        	android:id="@+id/freeze"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:layout_above="@+id/answer"
        	android:textColor="@color/cloud"
        	android:textSize="40sp"
        	android:textStyle="bold"
        	android:layout_centerHorizontal="true"
        	android:layout_marginBottom="35dp"
        	android:text="@string/freeze"
        	android:visibility="invisible"/>
        
        <Button
        	android:id="@+id/answer"
        	android:layout_width="100dp"
        	android:layout_height="40dp"
        	android:background="@drawable/yellow_square"
        	android:text="@string/gamePrompt"
        	android:textColor="@color/cloud"
        	android:textStyle="bold"
        	android:onClick="answerClicked"
        	android:textSize="18sp"
        	android:layout_above="@+id/square1"
        	android:layout_marginTop="0dp"
        	android:layout_marginBottom="40dp"
        	android:enabled="false"/>
        
       <Button
        	android:id="@+id/crazyAnswer"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignTop="@+id/answer"
        	android:layout_alignBottom="@+id/answer"
        	android:layout_alignRight="@+id/answer"
        	android:layout_alignLeft="@+id/answer"
        	android:background="@drawable/orange_square"
        	android:text="@string/gamePrompt"
        	android:textColor="@color/cloud"
        	android:textStyle="bold"
        	android:onClick="answerClicked"
        	android:textSize="18sp"
        	android:visibility="gone"
        	android:enabled="false"/>
        
        <TextView
            android:id="@+id/streak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="-20dp"
            android:layout_marginRight="-20dp"
            android:layout_alignRight="@+id/answer"
            android:layout_above="@+id/answer"
            android:textColor="@color/health_bar"
            android:visibility="invisible"/>
        		
    	<Button
        	android:id="@+id/square1"
        	android:layout_width="50dp"
        	android:layout_height="50dp"
        	android:layout_above="@+id/square3"
        	android:background="@drawable/tl_red"
        	android:onClick="square1Clicked"
        	android:soundEffectsEnabled="false"/>
    
    	<Button
        	android:id="@+id/square2"
        	android:layout_width="50dp"
        	android:layout_height="50dp"
        	android:layout_toRightOf="@+id/square1"
        	android:layout_above="@+id/square3"
        	android:background="@drawable/tr_yellow"
        	android:onClick="square2Clicked"
        	android:soundEffectsEnabled="false"/>
    
   		<Button
        	android:id="@+id/square3"
        	android:layout_width="50dp"
        	android:layout_height="50dp"
        	android:layout_alignParentBottom="true"
       		android:background="@drawable/bl_green"
        	android:onClick="square3Clicked"
        	android:soundEffectsEnabled="false"/>
    
    	<Button
        	android:id="@+id/square4"
        	android:layout_width="50dp"
        	android:layout_height="50dp"
        	android:layout_toRightOf="@+id/square3"
        	android:layout_alignParentBottom="true"
        	android:background="@drawable/br_blue"
        	android:onClick="square4Clicked"
        	android:soundEffectsEnabled="false"/>
    	
    	
    	<Button
    	    android:id="@+id/crazyButton"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignLeft="@+id/square1"
    	    android:layout_alignTop="@+id/square1"
    	    android:layout_alignRight="@+id/square4"
    	    android:layout_alignBottom="@+id/square4"
    	    android:onClick="crazyButtonClicked"
    	    android:soundEffectsEnabled="false"
    	    android:background="@+drawable/orange_square"
    	    android:visibility="gone"/>
    
   	</RelativeLayout>
   	
    
     <!-- PRE GAMEPLAY -->
    <TextView
        android:id="@+id/preGameTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultPreGameTimer"
        android:textColor="@color/cloud"
        android:textSize="100sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
    
    <!-- WRONG ANSWER -->
    <View
        android:id="@+id/wrongAnswer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"/>
    
    <!-- GAME OVER -->
    <RelativeLayout
        android:id="@+id/gameOverView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_trans50"
        android:visibility="gone">
        	
        	<RelativeLayout
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_centerHorizontal="true"
        	    android:layout_centerVertical="true"
        	    android:padding="40dp"
        	    android:background="@drawable/black_container"
        	    android:layout_margin="20dp">
        	    
        	    <TextView
        	        android:id="@+id/gameOver"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:text="@string/gameOver"
        	        android:textColor="@color/cloud"
        	        android:textStyle="bold"
        			android:textSize="35sp"
        			android:layout_marginBottom="20dp"
        			android:layout_centerHorizontal="true">
        	    </TextView>
        	    
        	    <TextView
        	        android:id="@+id/bestScore"
        	        android:layout_below="@+id/gameOver"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:text="@string/bestScore"
        	        android:textColor="@color/cloud"
        	        android:textStyle="bold"
        			android:textSize="18sp"
        			android:layout_marginBottom="20dp"
        			android:layout_centerHorizontal="true">
        	    </TextView>
        	    
        	    <TextView
        	        android:id="@+id/endScore"
        	        android:layout_below="@+id/bestScore"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:text="@string/endScore"
        	        android:textColor="@color/cloud"
        	        android:textStyle="bold"
        			android:textSize="18sp"
        			android:layout_centerHorizontal="true"
        			android:layout_marginBottom="20dp">
        	    </TextView>
        	    
        	    <LinearLayout 
        	        android:id="@+id/buttons_layout"
        			android:layout_width="match_parent"
        			android:layout_height="wrap_content"
        			android:layout_centerHorizontal="true"
        			android:layout_below="@+id/endScore">
        			<Button
        			    style="?android:attr/buttonBarButtonStyle" 
        				android:layout_width="0dp"
        				android:layout_height="wrap_content"
        				android:text="@string/retry"
        				android:gravity="center"
        				android:layout_marginRight="5dp"
        				android:paddingTop="10dp"
        				android:paddingBottom="10dp"
        				android:background="@drawable/gray_button"
        				android:textColor="@color/cloud"
        				android:layout_weight="1"
        				android:onClick="retryClicked"
        				android:soundEffectsEnabled="false"/>
        			<Button
        			    style="?android:attr/buttonBarButtonStyle"
        				android:id="@+id/backButton"
        				android:layout_width="0dp"
        				android:layout_height="wrap_content"
        				android:text="@string/back"
        				android:gravity="center"
        				android:layout_marginLeft="5dp"
        				android:paddingTop="10dp"
        				android:paddingBottom="10dp"
        				android:background="@drawable/gray_button"
        				android:textColor="@color/cloud"
        				android:layout_weight="1"
        				android:onClick="menuClicked"
        				android:soundEffectsEnabled="false"/>       
    			</LinearLayout>
    			
        	    <LinearLayout 
        	        android:id="@+id/buttons2_layout"
        			android:layout_width="match_parent"
        			android:layout_height="wrap_content"
        			android:layout_centerHorizontal="true"
        			android:layout_below="@+id/buttons_layout">
        	    
        	    <Button
        			style="?android:attr/buttonBarButtonStyle"
        			android:id="@+id/facebook_shareButton"
        			android:layout_width="0dp"
        			android:layout_weight="1"
        			android:layout_height="wrap_content"
        			android:text="@string/facebook_share"
        			android:gravity="center"
        			android:paddingTop="10dp"
        			android:paddingBottom="10dp"
        			android:layout_marginTop="10dp"
        			android:background="@drawable/gray_button"
        			android:textColor="@color/cloud"
        			android:onClick="facebookShareClicked"
        			android:drawableLeft="@drawable/facebook"
        			android:paddingLeft="7dp"
        			android:paddingRight="7dp"
        			android:soundEffectsEnabled="false"/>  
        	    
        	    <Button
        			style="?android:attr/buttonBarButtonStyle"
        			android:id="@+id/twitter_shareButton"
        			android:layout_width="0dp"
        			android:layout_weight="1"
        			android:layout_height="wrap_content"
        			android:text="@string/twitter_share"
        			android:gravity="center"
        			android:paddingTop="10dp"
        			android:paddingBottom="10dp"
        			android:layout_marginTop="10dp"
        			android:layout_marginLeft="10dp"
        			android:background="@drawable/gray_button"
        			android:textColor="@color/cloud"
        			android:onClick="shareClicked"
        			android:drawableLeft="@drawable/twitter"
        			android:paddingLeft="7dp"
        			android:paddingRight="7dp"
        			android:soundEffectsEnabled="false"/>
        	    
        	    </LinearLayout>
    			
        	    <TextView
        	        android:id="@+id/leaderboards_message"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:text="@string/leaderboards_message"
        	        android:textColor="@color/cloud"
        	        android:layout_below="@+id/buttons2_layout"
        	        android:textSize="12sp"
        	        android:layout_marginTop="20dp"/>
        	    
        	</RelativeLayout>
        
    </RelativeLayout>

</RelativeLayout>
